[package]
name = "docs-enricher"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.0.35"
http-body-util = "0.1.2"
hyper = "1.5.2"
octocrab = "0.42.1"
rig-core = "0.6.0"
schemars = { version = "0.8.21", features = ["derive_json_schema"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-tar = "0.3.1"
